tests/neg-custom-args/captures/capset-bound2.scala
import caps.*

class IO

def f[C^](io: IO^{C}) = ???

def test =
  f[{}](???)
  f[{}](???)
  f[{any}](???)
  f[Nothing](???) // error
  f[String](???) // error
